much more cleaned up, with new photo window popup functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ gtk = "0.7.0"
 gio = { version = "0.7.0", features = ["futures"] }
 gdk-pixbuf = { version = "0.7.0", features = ["futures"] }
 glib = { version = "0.8.2", features = ["futures"] }
+gdk = "0.11.0"
 # futures = "0.3.1"
 # tokio = { version = "0.2.2", features = ["full"] }
